# sa

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ACCESS_LINKS.md  CHANGELOG.md  CODESPACES_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLATFORM_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  RESUME_WORK.md  SETUP_LINKS.html  SUMMARY.sh  USAGE.md  VERIFICATION_REPORT.md  api_key_manager.py  coverage.xml  demo_app.py  docker-compose.yml  examples.py  pyproject.toml  requirements.txt  run.py  run_streamlit.sh  show_all_urls.sh  show_urls.sh  start_all_services.sh  stop_all_services.sh  test_api_live.py
.devcontainer/: Dockerfile  INDEX.md  QUICK_REFERENCE.md  README.md  devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  project-setup.md
.github/workflows/: codeql-analysis.yml  python-ci-debug.yml  python-ci.yml
data/: sa.db
src/sa/: __init__.py
src/sa/api/: __init__.py  models.py  routes.py
src/sa/generators/: __init__.py  audio_generator.py  image_generator.py  video_generator.py
src/sa/ui/: __init__.py  app.py  projects.py  templates.py
src/sa/utils/: __init__.py  config.py  database.py  projects.py  suggestions.py  templates.py
tests/: test_api.py  test_api_advanced.py  test_audio_generator.py  test_cache.py  test_database.py  test_image_generator.py  test_suggestions_advanced.py  test_templates.py  test_ui.py  test_ui_coverage.py
