[tool.poetry]
name = "sa"
version = "0.1.0"
description = "منصة تحويل النصوص إلى صور وفيديوهات مع إضافة الصوت"
authors = ["alsebaaest00 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31"
pillow = "^10.2"
openai = "^1.12"
elevenlabs = "^1.0"
moviepy = "^1.0"
pydub = "^0.25"
replicate = "^0.25"
python-dotenv = "^1.0"
requests = "^2.31"
numpy = "^1.26"
gtts = "^2.5"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^24.0"
pre-commit = "^4.4"
mypy = "^1.8"
types-requests = "^2.31"
pylint = "^3.0"
httpx = "^0.26"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "import-error",
    "missing-module-docstring",
    "too-few-public-methods",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
