[tool.poetry]
name = "sa"
version = "0.1.0"
description = "منصة تحويل النصوص إلى صور وفيديوهات مع إضافة الصوت"
authors = ["alsebaaest00 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31"
pillow = "^10.2"
openai = "^1.12"
elevenlabs = "^1.0"
moviepy = "^1.0"
pydub = "^0.25"
replicate = "^0.25"
python-dotenv = "^1.0"
requests = "^2.31"
numpy = "^1.26"
gtts = "^2.5"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^7.0"
black = "^24.0"
pre-commit = "^4.4"
mypy = "^1.8"
types-requests = "^2.31"
pylint = "^3.0"
httpx = "^0.26"
ruff = "^0.14.13"
codespell = "^2.4.1"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "venv", "__pycache__", ".git", "outputs", "mlruns"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.codespell]
skip = "*.pyc,*.mp3,*.mp4,*.wav,*.png,*.jpg,poetry.lock,.git,outputs,mlruns"
ignore-words-list = "ND,nd"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "import-error",
    "missing-module-docstring",
    "too-few-public-methods",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
